--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -17,6 +17,11 @@
     "logout": "ออกจากระบบ"
   },
   "auth": {
+  "locker": {
+    "title": "รหัสผ่านผิดครบ 3 ครั้ง",
+    "desc1": "ใส่รหัสผ่านครบจำนวนครั้งที่กำหนด ระบบจะระงับบัญชีของท่านชั่วคราว",
+    "desc2": "สามารถกู้เข้าสู่ระบบด้วยรหัสผ่านใหม่ที่ได้รับใน Email ของท่าน"
+  },
     "loginTitle": "เข้าสู่ระบบ",
     "loginSubtitle": "กรุณาเข้าสู่ระบบเพื่อดำเนินการต่อ",
     "registerTitle": "สร้างบัญชี",
@@ -37,6 +42,7 @@
     "otpRequired": "กรุณากรอกรหัสยืนยัน 6 หลัก",
     "verifySuccess": "ยืนยันรหัสสำเร็จ",
     "verifyError": "รหัสยืนยันไม่ถูกต้อง",
+    "otpWrong": "รหัสยืนยันไม่ถูกต้อง โปรดลองอีกครั้ง",
     "resendSuccess": "ส่งรหัสยืนยันใหม่แล้ว",
     "failModalTitle": "รหัสผ่านผิดครบ 2 ครั้ง",
     "failModalDesc1": "ท่านใส่รหัสผ่านครบ 2 ครั้ง",
