Add LockerPincode page and integrate OTP verification flow with localization support

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -20,7 +20,10 @@
   "locker": {
     "title": "Password entered incorrectly 3 times",
     "desc1": "You have entered the wrong password 3 times. The system will temporarily suspend your account.",
-    "desc2": "You can regain access by resetting your password via the link sent to your email."
+    "desc2": "You can regain access by resetting your password via the link sent to your email.",
+    "titlePincode": "Verification code entered incorrectly 5 times",
+    "desc1Pincode":"You have entered the verification code incorrectly 5 times. The system will temporarily suspend your account.",
+    "desc2Pincode":"Please wait for Admin to contact you via Email."
   },
     "loginTitle": "Sign In",
     "loginSubtitle": "Please sign in to continue",
@@ -41,7 +44,7 @@
     "resendCode": "Resend",
     "otpRequired": "Please enter 6-digit verification code",
     "verifySuccess": "Verification successful",
-    "verifyError": "Invalid verification code",
+    "verifyError": "Invalid verification code. Please try again.",
     "otpWrong": "The verification code is incorrect. Please try again.",
     "resendSuccess": "New verification code sent",
     "failModalTitle": "Password entered incorrectly 2 times",
