--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -20,7 +20,11 @@
   "locker": {
     "title": "รหัสผ่านผิดครบ 3 ครั้ง",
     "desc1": "ใส่รหัสผ่านครบจำนวนครั้งที่กำหนด ระบบจะงับบัญชีของท่าน ",
-    "desc2": "สามารถเข้าสู่ระบบด้วยรหัสผ่านใหม่ที่ได้รับ ใน Email ของท่าน"
+    "desc2": "สามารถเข้าสู่ระบบด้วยรหัสผ่านใหม่ที่ได้รับ ใน Email ของท่าน",
+    "titlePincode": "รหัสยืนยันครบ 5 ครั้ง",
+    "desc1Pincode":"ท่านใส่รหัสยืนยันครบจำนวนครั้งที่กำหนด ระบบจะงับบัญชีของท่าน",
+    "desc2Pincode":"โปรดรอ Admin ติดต่อกลับทาง Email"
+
   },
     "loginTitle": "เข้าสู่ระบบ",
     "loginSubtitle": "กรุณาเข้าสู่ระบบเพื่อดำเนินการต่อ",
@@ -41,7 +45,7 @@
     "resendCode": "ส่งอีกครั้ง",
     "otpRequired": "กรุณากรอกรหัสยืนยัน 6 หลัก",
     "verifySuccess": "ยืนยันรหัสสำเร็จ",
-    "verifyError": "รหัสยืนยันไม่ถูกต้อง",
+    "verifyError": "รหัสยืนยันไม่ถูกต้อง โปรดลองอีกครั้ง",
     "resendSuccess": "ส่งรหัสยืนยันใหม่แล้ว",
     "failModalTitle": "รหัสผ่านผิดครบ 2 ครั้ง",
     "failModalDesc1": "ท่านใส่รหัสผ่านครบ 2 ครั้ง",
