Add MessagePage component and enhance LanguageSwitcher styles; update localization for success messages

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -108,5 +108,12 @@
     "analytics": "Analytics",
     "settings": "Settings",
     "profile": "Profile"
+  },
+  "message": {
+    "success": {
+      "title": "Registration Successful!",
+      "description1": "Your account has been successfully created and all policies have been accepted.",
+      "button": "Continue"
+    }
   }
 }
