--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -109,5 +109,12 @@
     "analytics": "รายงาน",
     "settings": "การตั้งค่า",
     "profile": "โปรไฟล์"
+  },
+  "message": {
+    "success": {
+      "title": "สร้างบัญชีสำเร็จ!",
+      "description1": "บัญชีของคุณได้ถูกสร้างเรียบร้อยแล้ว และได้ยอมรับข้อกำหนดทั้งหมดแล้ว",
+      "button": "เข้าสู่ระบบ"
+    }
   }
 }
