Add confirmation verification text to localization files and update Organizationpreview component to use it

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -16,7 +16,8 @@
     "search": "Search...",
     "logout": "Logout",
     "back": "Back",
-    "next": "Next"
+    "next": "Next",
+    "confirmVerification": "Confirm Verification"
   },
   "auth": {
   "locker": {
