Update localization for success messages and enhance Organizationpreview component with verification handling

--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -115,9 +115,9 @@
   },
   "message": {
     "success": {
-      "title": "สร้างบัญชีสำเร็จ!",
-      "description1": "บัญชีของคุณได้ถูกสร้างเรียบร้อยแล้ว และได้ยอมรับข้อกำหนดทั้งหมดแล้ว",
-      "button": "เข้าสู่ระบบ"
+      "title": "สมัครสมาชิกสำเร็จ",
+      "description1": "หากผ่านการตรวจสอบ ท่านจะได้รับอีเมลยืนยันการสมัครสมาชิก",
+      "button": "รับทราบ"
     }
   },
   "organization": {
