feat: Add Header and Slider components for user interface
- Implemented Header component with navigation and cart button.
- Added SliderComponent for displaying images with responsive design.
- Created HomePage to integrate Header and Slider with mock image data.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -19,6 +19,11 @@
     "next": "Next",
     "confirmVerification": "Confirm Verification"
   },
+  "header": {
+    "home": "Home",
+    "government": "Government",
+    "cart": "Cart"
+  },
   "auth": {
   "locker": {
     "title": "Password entered incorrectly 3 times",
