feat: Enhance language support and update document section in HomePage

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -19,6 +19,13 @@
     "next": "Next",
     "confirmVerification": "Confirm Verification"
   },
+  "documents": {
+    "title": "Documents",
+    "name": "Name",
+    "update": "Update",
+    "download": "Download",
+    "viewAll": "View All Documents"
+  },
   "header": {
     "home": "Home",
     "government": "Government",
