feat: Update Thai localization for improved clarity and consistency in user prompts

--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -1,7 +1,7 @@
 {
   "common": {
-    "email": "อีเมล",
-    "password": "รหัสผ่าน",
+    "email": "ระบุอีเมล",
+    "password": "ระบุรหัสผ่าน",
     "confirmPassword": "ยืนยันรหัสผ่าน",
     "login": "เข้าสู่ระบบ",
     "signIn": "เข้าสู่ระบบ",
@@ -68,9 +68,9 @@
    
   },
   "validation": {
-    "emailRequired": "กรุณากรอกอีเมล",
+    "emailRequired": "โปรดระบุอีเมล",
     "emailInvalid": "รูปแบบอีเมลไม่ถูกต้อง",
-    "passwordRequired": "กรุณากรอกรหัสผ่าน",
+    "passwordRequired": "โปรดระบุรหัสผ่าน",
     "passwordMinLength": "รหัสผ่านต้องมีอย่างน้อย 8 ตัวอักษร",
     "confirmPasswordRequired": "กรุณายืนยันรหัสผ่าน",
     "passwordMismatch": "รหัสผ่านไม่ตรงกัน",
