feat: Enhance password validation messages and improve rendering in RegisterPage

--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -78,7 +78,9 @@
     "length8": "อย่างน้อย 8 ตัวอักษร",
     "upperLower": "อักษรพิมพ์ใหญ่และพิมพ์เล็ก",
     "number": "ตัวเลข อย่างน้อย 1 ตัว",
-    "special": "อักขระพิเศษอย่างน้อย 1 ตัว"
+    "special": "อักขระพิเศษอย่างน้อย 1 ตัว",
+    "uppercase": "มีตัวพิมพ์ใหญ่อย่างน้อย 1 ตัว",
+    "lowercase": "มีตัวพิมพ์เล็กอย่างน้อย 1 ตัว"
   },
   "terms": {
     "title": "ข้อกำหนดและเงื่อนไข",
