--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -78,7 +78,9 @@
     "length8": "At least 8 characters",
     "upperLower": "Upper and lowercase letters",
     "number": "At least 1 number",
-    "special": "At least 1 special character"
+    "special": "At least 1 special character",
+    "uppercase": "At least 1 uppercase letter",
+    "lowercase": "At least 1 lowercase letter"
   },
   "terms": {
     "title": "Terms and Conditions",
