Update Thai localization and implement privacy policy structure
- Modified Thai translations for email and password fields in th.json.
- Updated checkbox labels for terms, privacy, and cookies in th.json.
- Refactored Policies component to utilize a structured privacy policy from mock data.
- Added mock policy data for both Thai and English versions, including detailed sections and subsections for the privacy policy.

--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -1,7 +1,7 @@
 {
   "common": {
-    "email": "ระบุอีเมล",
-    "password": "ระบุรหัสผ่าน",
+    "email": "อีเมล",
+    "password": "หัสผ่าน",
     "confirmPassword": "ยืนยันรหัสผ่าน",
     "login": "เข้าสู่ระบบ",
     "signIn": "เข้าสู่ระบบ",
@@ -95,13 +95,11 @@
   "policies": {
     "title": "ข้อกำหนดและเงื่อนไข",
     "acceptButton": "สมัครสมาชิก",
-    "content": {
-      "html": "<h2>ข้อตกลงการใช้บริการ</h2><p>ยินดีต้อนรับสู่แพลตฟอร์มของเรา การเข้าถึงและใช้บริการของเรา ถือว่าคุณตกลงที่จะปฏิบัติตามข้อกำหนดและเงื่อนไขต่อไปนี้ กรุณาอ่านข้อตกลงนี้อย่างละเอียดก่อนดำเนินการลงทะเบียน</p><h3>1. การยอมรับข้อกำหนด</h3><p>โดยการสร้างบัญชีหรือใช้บริการของเรา คุณรับทราบว่าคุณได้อ่าน เข้าใจ และตกลงที่จะปฏิบัติตามข้อกำหนดการใช้บริการและนโยบายความเป็นส่วนตัวของเรา หากคุณไม่เห็นด้วยกับส่วนใดส่วนหนึ่งของข้อกำหนดเหล่านี้ คุณต้องไม่ใช้บริการของเรา</p><h3>2. บัญชีผู้ใช้และการลงทะเบียน</h3><p>เพื่อเข้าถึงคุณลักษณะบางอย่างของแพลตฟอร์มของเรา คุณต้องลงทะเบียนสำหรับบัญชี คุณตกลงที่จะให้ข้อมูลที่ถูกต้อง ปัจจุบัน และสมบูรณ์ในระหว่างกระบวนการลงทะเบียน และจะอัพเดทข้อมูลดังกล่าวเพื่อให้คงความถูกต้อง ปัจจุบัน และสมบูรณ์ คุณมีความรับผิดชอบในการรักษาความปลอดภัยรหัสผ่านของคุณและสำหรับกิจกรรมทั้งหมดที่เกิดขึ้นภายใต้บัญชีของคุณ</p><h3>3. ความเป็นส่วนตัวและการคุ้มครองข้อมูล</h3><p>เรามุ่งมั่นในการปกป้องความเป็นส่วนตัวและข้อมูลส่วนบุคคลของคุณ นโยบายความเป็นส่วนตัวของเราอธิบายว่าเราเก็บรวบรวม ใช้ และปกป้องข้อมูลของคุณอย่างไรเมื่อคุณใช้บริการของเรา การใช้แพลตฟอร์มของเราถือว่าคุณยินยอมให้เราเก็บรวบรวมและใช้ข้อมูลของคุณตามที่อธิบายไว้ในนโยบายความเป็นส่วนตัวของเรา</p><h3>4. นโยบายการใช้งานที่ยอมรับได้</h3><p>คุณตกลงที่จะใช้บริการของเราเพื่อวัตถุประสงค์ที่ถูกกฎหมายเท่านั้น และตามข้อกำหนดการใช้บริการเหล่านี้ คุณต้องไม่ใช้แพลตฟอร์มของเราเพื่อ:</p><ul><li>ละเมิดกฎหมายหรือระเบียบข้อบังคับที่บังคับใช้</li><li>ละเมิดสิทธิของผู้อื่น</li><li>ส่งเนื้อหาที่เป็นอันตราย ขุ่นเคือง หรือไม่เหมาะสม</li><li>พยายามเข้าถึงระบบของเราโดยไม่ได้รับอนุญาต</li><li>รบกวนการทำงานที่เหมาะสมของบริการของเรา</li></ul><h3>5. สิทธิในทรัพย์สินทางปัญญา</h3><p>เนื้อหา คุณลักษณะ และฟังก์ชันการทำงานทั้งหมดของแพลตฟอร์มของเรา รวมถึงแต่ไม่จำกัดเฉพาะข้อความ กราฟิก โลโก้ รูปภาพ และซอฟต์แวร์ เป็นกรรมสิทธิ์ของเราหรือผู้ให้สิทธิ์ของเรา และได้รับการคุ้มครองโดยกฎหมายลิขสิทธิ์ เครื่องหมายการค้า และกฎหมายทรัพย์สินทางปัญญาอื่นๆ</p><h3>6. ความพร้อมใช้งานของบริการ</h3><p>แม้ว่าเราจะมุ่งมั่นที่จะให้บริการอย่างไม่หยุดชะงัก แต่เราไม่ได้รับประกันว่าแพลตฟอร์มของเราจะพร้อมใช้งานตลอดเวลา เราขอสงวนสิทธิ์ในการปรับเปลี่ยน ระงับ หรือยกเลิกส่วนใดส่วนหนึ่งของบริการของเราได้ตลอดเวลาโดยไม่ต้องแจ้งให้ทราบล่วงหน้า</p><h3>7. ข้อจำกัดความรับผิดชอบ</h3><p>เท่าที่กฎหมายอนุญาต เราจะไม่รับผิดชอบต่อความเสียหายทางอ้อม อุบัติเหตุ พิเศษ ที่ตามมา หรือเพื่อการลงโทษที่เกิดขึ้นจากหรือเกี่ยวข้องกับการใช้บริการของเราของคุณ แม้ว่าเราจะได้รับคำแนะนำเกี่ยวกับความเป็นไปได้ของความเสียหายดังกล่าว</p><h3>8. คุกกี้และเทคโนโลยีการติดตาม</h3><p>เราใช้คุกกี้และเทคโนโลยีการติดตามที่คล้ายกันเพื่อปรับปรุงประสบการณ์ของคุณบนแพลตฟอร์มของเรา คุกกี้ช่วยให้เราเข้าใจว่าคุณใช้บริการของเราอย่างไร และช่วยให้เราปรับปรุงฟังก์ชันการทำงานได้ คุณสามารถควบคุมการตั้งค่าคุกกี้ผ่านการตั้งค่าเบราว์เซอร์ของคุณ</p><h3>9. การแก้ไขข้อกำหนด</h3><p>เราขอสงวนสิทธิ์ในการแก้ไขข้อกำหนดการใช้บริการเหล่านี้ได้ตลอดเวลา เราจะแจ้งให้ผู้ใช้ทราบเกี่ยวกับการเปลี่ยนแปลงที่สำคัญโดยการโพสต์ข้อกำหนดที่อัพเดทบนแพลตฟอร์มของเรา การใช้บริการของเราอย่างต่อเนื่องหลังจากการเปลี่ยนแปลงดังกล่าวถือเป็นการยอมรับข้อกำหนดใหม่</p><h3>10. การยกเลิก</h3><p>เราอาจยกเลิกหรือระงับบัญชีและการเข้าถึงบริการของคุณทันที โดยไม่ต้องแจ้งให้ทราบล่วงหน้า หากคุณละเมิดข้อกำหนดการใช้บริการเหล่านี้หรือมีพฤติกรรมที่เราพิจารณาว่าไม่เหมาะสมหรือเป็นอันตรายต่อแพลตฟอร์มหรือผู้ใช้รายอื่น</p><h3>11. กฎหมายที่ใช้บังคับ</h3><p>ข้อกำหนดการใช้บริการเหล่านี้จะถูกควบคุมและตีความตามกฎหมายของเขตอำนาจศาลที่บริษัทของเราจดทะเบียน โดยไม่คำนึงถึงหลักการความขัดแย้งของกฎหมาย</p><h3>12. ข้อมูลการติดต่อ</h3><p>หากคุณมีคำถามเกี่ยวกับข้อกำหนดการใช้บริการเหล่านี้ กรุณาติดต่อทีมสนับสนุนของเราที่ <a href='mailto:support@company.com'>support@company.com</a> หรือเยี่ยมชมศูนย์ช่วยเหลือของเราสำหรับข้อมูลเพิ่มเติม</p><p><strong>อัพเดทล่าสุด:</strong> มกราคม 2025</p>"
-    },
+   
     "checkboxes": {
-      "terms": "ฉันได้อ่านและยอมรับ นโยบายความเป็นส่วนตัว",
-      "privacy": "ฉันได้อ่านและยอมรับ ข้อกำหนดและเงื่อนไข",
-      "cookies": "ฉันได้อ่านและยอมรับทั้งหมด"
+      "terms": "ฉันได้อ่านและยอมรับ นโยบายการคุ้มครองข้อมูลส่วนบุคคุล",
+      "privacy": "ฉันได้อ่านและยอมรับ นโยบายและเงื่อนไขการให้บริการศูนย์รับฝากจุลินทรีย์",
+      "cookies": "ฉันได้อ่านและยอมรับ ข้อตกลงการให้บริการฝากเก็บสายพันธุ์จุลินทรีย์ และ/หรือชีววัตถุ"
     }
   },
   "dashboard": {
